--- a/index.html
+++ b/index.html
@@ -1962,8 +1962,8 @@ may see its associated interface called <code>ProximitySensor</code>.</p>
 hold <a data-link-type="dfn" href="#output-data">output data</a> should be named after the full name of this <a data-link-type="dfn" href="#output-data">output data</a>.
 For example, the <code>TemperatureSensorReading</code> interface should hold
 the value of the <a data-link-type="dfn" href="#sensor">sensor</a>’s <a data-link-type="dfn" href="#output-data">output data</a> in
-a <code>temperature</code> attribute (and not a <code>value</code> or <code>temp</code> attribute).</p>
-   <p>A good starting point for naming are the
+a <code>temperature</code> attribute (and not a <code>value</code> or <code>temp</code> attribute).
+A good starting point for naming are the
 Quantities, Units, Dimensions and Data Types Ontologies <a data-link-type="biblio" href="#biblio-qudt">[QUDT]</a>.</p>
    <h3 class="heading settled" data-level="9.2" id="unit"><span class="secno">9.2. </span><span class="content">Unit</span><a class="self-link" href="#unit"></a></h3>
    <p>Extension specification must specify the <a data-link-type="dfn" href="#output-data">Output data</a>’s unit.</p>
