--- a/index.html
+++ b/index.html
@@ -1601,7 +1601,7 @@ at an ajustable <dfn data-dfn-type="dfn" data-noexport="" id="frequency">frequen
 the <a data-link-type="dfn" href="#reporting-modes">reporting mode</a> is said to be <dfn data-dfn-type="dfn" data-noexport="" id="periodic">periodic<a class="self-link" href="#periodic"></a></dfn>.
 When it is only reported upon measurable change,
 the <a data-link-type="dfn" href="#reporting-modes">reporting mode</a> is said to be <dfn data-dfn-type="dfn" data-noexport="" id="episodic">episodic<a class="self-link" href="#episodic"></a></dfn>.</p>
-   <p><a data-link-type="dfn" href="#episodic">Episodic</a> <a data-link-type="dfn" href="#reporting-modes">reporting mode</a> can gives the user agent
+   <p><a data-link-type="dfn" href="#episodic">Episodic</a> <a data-link-type="dfn" href="#reporting-modes">reporting modes</a> can give the user agent
 more latitude to carry out power- or CPU-saving strategies
 and should generally be favored. <a data-link-type="dfn" href="#periodic">Periodic</a> <a data-link-type="dfn" href="#reporting-modes">reporting mode</a>, on the other hand,
 allows a much more fine-grained approach
