--- a/index.html
+++ b/index.html
@@ -2084,18 +2084,21 @@ enum ProximitySensorDirection {
    <p>The following people have greatly contributed to this specification through extensive discussions on GitHub:
 Anssi Kostiainen,
 Boris Smus,
+chaals,
 Claes Nilsson,
 Dave Raggett,
-davidmarkclements,
+David Mark Clements,
 Domenic Denicola,
 Dominique Hazael-Massieux (via the HTML5Apps project),
-Frederick Hirsch,
 Francesco Iovine,
+Frederick Hirsch,
 gmandyam,
 Jafar Husain,
 Johannes Hund,
 Kris Kowal,
 Marcos Caceres,
+Marijn Kruisselbrink,
+Mark Foltz,
 Mats Wichmann,
 Matthew Podwysocki,
 pablochacin,
@@ -2106,10 +2109,13 @@ Rijubrata Bhaumik,
 robman,
 Sean T. McBeth,
 smaug----,
-and
-zenparsing.</p>
+Tab Atkins Jr.,
+Virginie Galindo,
+zenparsing,
+and Zoltan Kis.</p>
    <p>We’d also like to thank
 Anssi Kostiainen,
+Dominique Hazael-Massieux,
 Erik Wilde,
 and
 Michael[tm] Smith
