--- a/index.html
+++ b/index.html
@@ -1492,7 +1492,7 @@ that can be extended to accommodate different sensor types.</p>
      <a href="#abstract-operations"><span class="secno">7</span> <span class="content">Abstract Operations</span></a>
      <ol class="toc">
       <li><a href="#sensor-object-construction"><span class="secno">7.1</span> <span class="content">Sensor Object Construction</span></a>
-      <li><a href="#update-state"><span class="secno">7.2</span> <span class="content">Update State</span></a>
+      <li><a href="#update-state"><span class="secno">7.2</span> <span class="content"><span>Update State</span></span></a>
       <li><a href="#update-reading"><span class="secno">7.3</span> <span class="content">Update Reading</span></a>
      </ol>
     <li>
@@ -1964,8 +1964,7 @@ expressed in milliseconds that passed since the <a data-link-type="dfn" href="ht
        <p>run the <a data-link-type="dfn" href="#read-steps" id="ref-for-read-steps-2">read steps</a> for <var>sensor</var>.</p>
      </ol>
    </ol>
-   <h3 class="heading settled" data-algorithm="Update State" data-level="7.2" id="update-state"><span class="secno">7.2. </span><span class="content">Update State</span><a class="self-link" href="#update-state"></a></h3>
-   <p>The <dfn class="dfn-paneled" data-dfn-type="dfn" data-lt="Update State" data-noexport="" id="update-state0">Update State<span class="dfn-panel" data-deco=""><b><a href="#update-state0">#update-state0</a></b><b>Referenced in:</b><span><a href="#ref-for-update-state0-1">7.3. Update Reading</a></span></span></dfn> algorithm must run these steps or their <a data-link-type="dfn" href="#equivalent" id="ref-for-equivalent-2">equivalent</a>:</p>
+   <h3 class="heading settled" data-algorithm="Update State" data-level="7.2" id="update-state"><span class="secno">7.2. </span><span class="content"><dfn class="dfn-paneled" data-dfn-type="dfn" data-lt="Update State" data-noexport="" id="update-state0">Update State<span class="dfn-panel" data-deco=""><b><a href="#update-state0">#update-state0</a></b><b>Referenced in:</b><span><a href="#ref-for-update-state0-1">7.3. Update Reading</a></span></span></dfn></span><a class="self-link" href="#update-state"></a></h3>
    <dl>
     <dt data-md="">
      <p>input</p>
@@ -1985,7 +1984,7 @@ expressed in milliseconds that passed since the <a data-link-type="dfn" href="ht
      <p><a data-link-type="dfn" href="https://html.spec.whatwg.org/multipage/webappapis.html#queue-a-task">Queue a task</a> to <a data-link-type="dfn" href="https://html.spec.whatwg.org/multipage/webappapis.html#fire-a-simple-event">fire a simple event</a> named <code>statechange</code> at <var>sensorInstance</var>.</p>
    </ol>
    <h3 class="heading settled" data-algorithm="Update Reading" data-level="7.3" id="update-reading"><span class="secno">7.3. </span><span class="content">Update Reading</span><a class="self-link" href="#update-reading"></a></h3>
-   <p>The <dfn data-dfn-type="dfn" data-noexport="" id="update-reading0">Update Reading<a class="self-link" href="#update-reading0"></a></dfn> algorithm must run these steps or their <a data-link-type="dfn" href="#equivalent" id="ref-for-equivalent-3">equivalent</a>:</p>
+   <p>The <dfn data-dfn-type="dfn" data-noexport="" id="update-reading0">Update Reading<a class="self-link" href="#update-reading0"></a></dfn> algorithm must run these steps or their <a data-link-type="dfn" href="#equivalent" id="ref-for-equivalent-2">equivalent</a>:</p>
    <dl>
     <dt data-md="">
      <p>input</p>
@@ -2298,7 +2297,7 @@ for their editorial input.</p>
     steps") are to be interpreted with the meaning of the key word ("must",
     "should", "may", etc) used in introducing the algorithm.</p>
    <p>Conformance requirements phrased as algorithms or specific steps can be
-    implemented in any manner, so long as the end result is <dfn class="dfn-paneled" data-dfn-type="dfn" data-lt="equivalent" data-noexport="" id="equivalent">equivalent<span class="dfn-panel" data-deco=""><b><a href="#equivalent">#equivalent</a></b><b>Referenced in:</b><span><a href="#ref-for-equivalent-1">6.1.4. Sensor.start</a></span><span><a href="#ref-for-equivalent-2">7.2. Update State</a></span><span><a href="#ref-for-equivalent-3">7.3. Update Reading</a></span></span></dfn>. In
+    implemented in any manner, so long as the end result is <dfn class="dfn-paneled" data-dfn-type="dfn" data-lt="equivalent" data-noexport="" id="equivalent">equivalent<span class="dfn-panel" data-deco=""><b><a href="#equivalent">#equivalent</a></b><b>Referenced in:</b><span><a href="#ref-for-equivalent-1">6.1.4. Sensor.start</a></span><span><a href="#ref-for-equivalent-2">7.3. Update Reading</a></span></span></dfn>. In
     particular, the algorithms defined in this specification are intended to
     be easy to understand and are not intended to be performant. Implementers
     are encouraged to optimize.</p>
