--- a/index.html
+++ b/index.html
@@ -1854,7 +1854,7 @@ associated with the same <a data-link-type="dfn" href="#sensor" id="ref-for-sens
       <p>Run these sub-steps <a data-link-type="dfn" href="https://html.spec.whatwg.org/multipage/infrastructure.html#in-parallel">in parallel</a>:</p>
       <ol>
        <li data-md="">
-        <p>Invoke <a data-link-type="dfn" href="#registering-a-sensor" id="ref-for-registering-a-sensor-1">Registering a Sensor</a> algorithm with <var>sensorInstance</var> and as argument.</p>
+        <p>Invoke <a data-link-type="dfn" href="#registering-a-sensor" id="ref-for-registering-a-sensor-1">Registering a Sensor</a> algorithm with <var>sensorInstance</var> as argument.</p>
       </ol>
     </ol>
    </div>
