Make return value explicit.

--- a/index.html
+++ b/index.html
@@ -1856,6 +1856,8 @@ associated with the same <a data-link-type="dfn" href="#sensor" id="ref-for-sens
        <li data-md="">
         <p>Invoke <a data-link-type="dfn" href="#registering-a-sensor" id="ref-for-registering-a-sensor-1">Registering a Sensor</a> algorithm with <var>sensorInstance</var> as argument.</p>
       </ol>
+     <li data-md="">
+      <p>return <code>undefined</code>.</p>
     </ol>
    </div>
    <h4 class="heading settled" data-level="6.1.4" id="sensorstop"><span class="secno">6.1.4. </span><span class="content">Sensor.stop</span><a class="self-link" href="#sensorstop"></a></h4>
@@ -1878,6 +1880,8 @@ associated with the same <a data-link-type="dfn" href="#sensor" id="ref-for-sens
        <li data-md="">
         <p>Invoke <a data-link-type="dfn" href="#unregistering-a-sensor" id="ref-for-unregistering-a-sensor-1">Unregistering a Sensor</a> algorithm with <var>sensorInstance</var> as arguments.</p>
       </ol>
+     <li data-md="">
+      <p>return <code>undefined</code>.</p>
     </ol>
    </div>
    <h4 class="heading settled" data-level="6.1.5" id="sensoronerror"><span class="secno">6.1.5. </span><span class="content">Sensor.onerror</span><a class="self-link" href="#sensoronerror"></a></h4>
