--- a/index.html
+++ b/index.html
@@ -2347,6 +2347,20 @@ enum ProximitySensorDirection {
 };
 </pre>
    <h2 class="heading settled" data-level="10" id="acknowledgements"><span class="secno">10. </span><span class="content">Acknowledgements</span><a class="self-link" href="#acknowledgements"></a></h2>
+   <p>First and foremost, I would like to thank Anssi Kostiainen
+for his continuous and dedicates support and input throughout
+the development of this specification.</p>
+   <p>Special thanks to Rick Waldron for
+driving the discussion around a generic sensor API design for the Web,
+sketching the original API on which this is based,
+providing implementation feedback from his work on Johnny-Five,
+and continuous input during the development of this specification.</p>
+   <p>Special thanks to Boris Smus, Tim Volodine, and Rich Tibbett
+for their initial work on exposing sensors to the Web with consistency.</p>
+   <p>Thanks to Anne van Kesteren
+for his tireless help both in person and through IRC.</p>
+   <p>Thanks also to Frederick Hirsch and Dominique Hazaël-Massieux (via the HTML5Apps project)
+for both their administrative help and technical input.</p>
    <p>The following people have greatly contributed to this specification through extensive discussions on GitHub:
 Anssi Kostiainen,
 Boris Smus,
@@ -2355,7 +2369,7 @@ Claes Nilsson,
 Dave Raggett,
 David Mark Clements,
 Domenic Denicola,
-Dominique Hazael-Massieux (via the HTML5Apps project),
+Dominique Hazaël-Massieux (via the HTML5Apps project),
 Francesco Iovine,
 Frederick Hirsch,
 gmandyam,
@@ -2381,7 +2395,7 @@ zenparsing,
 and Zoltan Kis.</p>
    <p>We’d also like to thank
 Anssi Kostiainen,
-Dominique Hazael-Massieux,
+Dominique Hazaël-Massieux,
 Erik Wilde,
 and
 Michael[tm] Smith
