--- a/index.html
+++ b/index.html
@@ -2394,6 +2394,7 @@ and continuous input during the development of this specification.</p>
 for their initial work on exposing sensors to the Web with consistency.</p>
    <p>Thanks to Anne van Kesteren
 for his tireless help both in person and through IRC.</p>
+   <p>Thanks to Domenic Denicola and Jake Archibald for their help.</p>
    <p>Thanks also to Frederick Hirsch and Dominique Hazaël-Massieux (via the HTML5Apps project)
 for both their administrative help and technical input.</p>
    <p>The following people have greatly contributed to this specification through extensive discussions on GitHub:
