--- a/index.html
+++ b/index.html
@@ -1870,7 +1870,8 @@ associated with the same <a data-link-type="dfn" href="#sensor" id="ref-for-sens
    <h4 class="heading settled" data-level="6.1.5" id="sensoronerror"><span class="secno">6.1.5. </span><span class="content">Sensor.onerror</span><a class="self-link" href="#sensoronerror"></a></h4>
    <h4 class="heading settled" data-level="6.1.6" id="sensoronchange"><span class="secno">6.1.6. </span><span class="content">Sensor.onchange</span><a class="self-link" href="#sensoronchange"></a></h4>
    <h4 class="heading settled" data-level="6.1.7" id="event-handlers"><span class="secno">6.1.7. </span><span class="content">Event handlers</span><a class="self-link" href="#event-handlers"></a></h4>
-   <p>The following are the <a data-link-type="dfn" href="https://html.spec.whatwg.org/multipage/webappapis.html#event-handlers">event handlers</a> (and their corresponding <a data-link-type="dfn" href="https://html.spec.whatwg.org/multipage/webappapis.html#event-handler-event-type">event handler event types</a>) that MUST be supported as attributes by the objects implementing the <a data-link-type="dfn" href="#sensor" id="ref-for-sensor-27">Sensor</a> interface:</p>
+   <p>The following are the <a data-link-type="dfn" href="https://html.spec.whatwg.org/multipage/webappapis.html#event-handlers">event handlers</a> (and their corresponding <a data-link-type="dfn" href="https://html.spec.whatwg.org/multipage/webappapis.html#event-handler-event-type">event handler event types</a>)
+that must be supported as attributes by the objects implementing the <a data-link-type="dfn" href="#sensor" id="ref-for-sensor-27">Sensor</a> interface:</p>
    <table class="simple">
     <thead>
      <tr>
