Link Error interface.

--- a/index.html
+++ b/index.html
@@ -2237,7 +2237,7 @@ dictionary <dfn class="dfn-paneled idl-code" data-dfn-type="dictionary" data-exp
     <dd data-md="">
      <p><var>sensorInstance</var>, a <a class="idl-code" data-link-type="interface" href="#sensor" id="ref-for-sensor-12">Sensor</a> object.</p>
     <dd data-md="">
-     <p><var>error</var>, an Error object.</p>
+     <p><var>error</var>, an <a data-link-type="dfn" href="https://heycam.github.io/webidl/#error">Error</a> object.</p>
     <dt data-md="">
      <p>output</p>
     <dd data-md="">
@@ -2661,6 +2661,7 @@ for their editorial input.</p>
    <li>
     <a data-link-type="biblio" href="#biblio-webidl">[WebIDL]</a> defines the following terms:
     <ul>
+     <li><a href="https://heycam.github.io/webidl/#error">error</a>
      <li><a href="https://heycam.github.io/webidl/#invalidstateerror">invalidstateerror</a>
      <li><a href="https://heycam.github.io/webidl/#dfn-throw">throw</a>
     </ul>
