--- a/index.html
+++ b/index.html
@@ -2536,6 +2536,9 @@ extension specifications may choose not to define a default sensor.</p>
      <li class="task-list-item">
       <input class="task-list-item-checkbox" disabled="" type="checkbox">
        Document current issue as a note in the Extensibility section of the spec.
+     <li class="task-list-item">
+      <input class="task-list-item-checkbox" disabled="" type="checkbox">
+       Rewrite the permission seeking abstract operations once <a class="issue-link js-issue-link" data-error-text="Failed to load issue title" data-id="139764016" data-permission-text="Issue title is private" data-url="https://github.com/w3c/permissions/issues/66" href="https://github.com/w3c/permissions/pull/66">w3c/permissions#66</a> lands..
     </ul>
    </div>
    <h3 class="heading settled" data-level="10.7" id="immutability-requirement"><span class="secno">10.7. </span><span class="content">Immutability Requirements</span><a class="self-link" href="#immutability-requirement"></a></h3>
